tests/warn/operator.jo
// Function operators
def (x: Int, y: Int) ** (z: Int): Int = ...   // error: too many pre params

def (x: Int) ++ (y: Int, z: Int): Int = ...   // error: too many post params

def --(x: Int, y: Int): Int = ...             // error: too many post params

def (x: Int) !! : Int = ...                   // error: postfix not supported


// Pattern operators
pattern (x: Int, y: Int) ** (z: Int): Int =   // error: too many pre params
  case _ then x = ..., y = ..., z = ...

pattern (x: Int) ++ (y: Int, z: Int): Int =   // error: too many post params
  case _ then x = ..., y = ..., z = ...

pattern --(x: Int, y: Int): Int =             // error: too many post params
  case _ then x = ..., y = ...

pattern (x: Int) !! : Int =                   // error: postfix not supported
  case _ then x = ...


// Type operators
type [A, B] ** [C] = Int                      // error: too many pre type params

type [A] ++ [B, C] = Int                      // error: too many post type params

type [A] !! = Int                             // error: postfix not supported
